--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -7,10 +7,13 @@
 }
 
 input {
-  border: 1px solid #9496b0;
-  border-radius: 8px;
+  border: 1px solid #d6d6d6;
+  border-radius: 4px;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
   color: #333;
-  background: #fff;
+  background: rgba(#fff, 0.9);
+  border-bottom-color: #333;
   padding: 4px 12px !important;
   outline: none;
 }
